# CoolPark

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  __init__.py  db.sqlite3  docker-compose.yml  gitlab-ci.yml  pyproject.toml  readme.md  requirements.txt
automobilies/: apps.py  entities.py  models.py  repositories.py
automobilies/migrations/: 0001_initial.py  0002_auto_20210322_1803.py
automobilies/tests/: tests_entities.py  tests_models.py  tests_repo.py
configs/: .env  exceptions.py  settings.py  urls.py
park/: entities.py  factories.py  helpers.py  interators.py  interfaces.py  models.py  repository.py  serializers.py  urls.py  validators.py  views.py
park/migrations/: 0001_initial.py  0002_auto_20210321_1523.py  0003_auto_20210321_1530.py
park/tests/: tests_entities.py
parking/: apps.py  entities.py  factories.py  helpers.py  interfaces.py  iterators.py  models.py  repository.py  serializers.py  urls.py  validators.py  views.py
parking/migrations/: 0001_initial.py  0002_auto_20210321_1523.py  0003_auto_20210321_1530.py  0004_auto_20210322_1803.py
parking/tests/: tests_entities.py  tests_factories.py  tests_helpers.py  tests_interators.py  tests_models.py  tests_repo.py  tests_serializers.py  tests_validators.py  tests_views_api.py
